--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,16 @@
 $danger-color: red;
 
-p {
-    color: $danger-color;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+}
+
+body {
+    display: flex;
+}
+
+svg {
+    margin: auto;
 }
